ingress-deployment/hello-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello--dev-service
  namespace: dev
  labels:
    app: hello-dev
spec:
  type: NodePort
  selector:
    app: hello-dev
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
