ingress-deployment/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-rules
spec:
  rules:
  - host: block.kubernetes.jefftutors.com
    http:
      paths:
      - path: / 
        backend:
          serviceName: hello-service
          servicePort: 80
